    Default number of flashes is 10 times, with a highlight duration of 0.4s, and a cooldown interval of 0.4s in-between.

* Wheels Module
  - Brake and tyre wear calculation is now handled by Wheels Module.
  - [New]Add delta wear calculation for accurately estimating tyre wear rate per lap.

* Tyre Wear Widget
  - [New]Add "show_end_stint_remaining" option, which shows estimated total remaining tyre tread at the of current stint. This option helps to determine whether there is enough tread for current or more stints.
  - "show_wear_difference" option now shows estimated tyre wear difference per lap (at least one valid lap is required).
  - Removed "show_live_wear_difference", "freeze_duration" options. 

* Misc
  - Reload module and widget automatically after saving or applying changes in editor.
  - "enable_high_dpi_scaling" option is now enabled by default for new user.
  - Fixed global locale setting for correctly displaying digits and decimal separator in certain system that uses special characters.
  - Auto load preset function now checks load-state only once when player enters track.
  - Various optimization.

2.30.1 (2025-06-12)
-----------------------------
* Major change to API accessing
  - Updated URL addresses for accessing data from LMU's Rest API (due to changes from June update), including new penalty time data that used for accurate pit time estimate.
  - Virtual energy, brake wear, vehicle damage, pit stop related data are now read from "RepairAndRefuel" URL address (same as in v2.28.1).
    Important note:
    "RepairAndRefuel" URL address previously was known to have chance to cause MFD pitstop menu flickering issue if accessed at high frequency. This flickering issue has been acknowledged by game developer, but not yet fixed by game.
    "RepairAndRefuel" is the only address for accessing those important data from LMU Rest API (as of LMU June update), currently there is no other alternatives.