@@ -76,7 +76,7 @@ class Realtime(DataModule):
                     gps_last = POS_XY_ZERO
 
                     gen_brake_wear = calc_brake_wear(output)
-                    gen_tyre_wear = calc_tyre_wear(output)
+                    gen_tyre_wear = calc_tyre_wear(output, self.mcfg["minimum_delta_distance"])
 
                 # Read telemetry
                 speed = api.read.vehicle.speed()
@@ -138,21 +138,19 @@ class Realtime(DataModule):
 
 
 @generator_init
-def calc_tyre_wear(output: WheelsInfo):
+def calc_tyre_wear(output: WheelsInfo, min_delta_distance: float):
     """Calculate tyre wear & delta wear"""
     last_lap_stime = 0.0  # last lap start time
     tread_last = [0.0] * 4  # last moment remaining tread
     tread_wear_curr = [0.0] * 4  # current lap tread wear
     tread_wear_last = [0.0] * 4  # last lap tread wear
-    delta_zero = (0.0,) * 5
 
     is_pit_lap = 0  # whether pit in or pit out lap
-    is_valid_delta = False
     delta_recording = False
+    delta_zero = (0.0, 0.0, 0.0, 0.0, 0.0)
     delta_array_raw = [delta_zero]  # distance, battery net change
     delta_array_last = (delta_zero,)
     pos_last = 0.0  # last checked vehicle position
-    min_delta_distance = 5
 
     while True:
         tread_curr_set = yield None
@@ -160,7 +158,6 @@ def calc_tyre_wear(output: WheelsInfo):
         laptime_curr = api.read.timing.elapsed() - lap_stime
         pos_curr = api.read.lap.distance()
         is_pit_lap |= api.read.vehicle.in_pits()
-        delay_update = laptime_curr > 0.3
 
         if lap_stime != last_lap_stime:
             tread_wear_last[:] = tread_wear_curr
@@ -173,7 +170,6 @@ def calc_tyre_wear(output: WheelsInfo):
             delta_array_raw.append(delta_zero)
             pos_last = pos_curr
             delta_recording = laptime_curr < 1
-            is_valid_delta = len(delta_array_last) > 1
             is_pit_lap = 0
 
         # Distance desync check at start of new lap, reset if higher than normal distance
@@ -187,6 +183,14 @@ def calc_tyre_wear(output: WheelsInfo):
             delta_array_raw.append((pos_curr, *tread_wear_curr))
             pos_last = pos_curr
 
+        # Find delta data index
+        if laptime_curr > 0.3:
+            index_higher = calc.binary_search_higher_column(
+                delta_array_last, pos_curr, 0, len(delta_array_last) - 1)
+            index_lower = index_higher - 1
+        else:
+            index_higher = index_lower = 0
+
         # Calculate wear difference
         for idx, tread_curr in enumerate(tread_curr_set):
             tread_curr *= 100
@@ -197,18 +201,20 @@ def calc_tyre_wear(output: WheelsInfo):
             if wear_diff > 0:
                 tread_wear_curr[idx] += wear_diff
 
-            # Delta wear
-            if is_valid_delta:
-                output.deltaTreadWear[idx] = calc.delta_telemetry(
-                    delta_array_last,
+            # Calculate delta wear
+            if index_lower < 0:
+                delta_wear = 0.0
+            else:
+                delta_wear = tread_wear_curr[idx] - calc.linear_interp(
                     pos_curr,
-                    tread_wear_curr[idx],
-                    delay_update,
-                    0,
-                    idx + 1,
+                    delta_array_last[index_lower][0],
+                    delta_array_last[index_lower][idx + 1],
+                    delta_array_last[index_higher][0],
+                    delta_array_last[index_higher][idx + 1],
                 )
 
             # Output
+            output.deltaTreadWear[idx] = delta_wear
             output.currentTreadDepth[idx] = tread_curr
             output.currentTreadWear[idx] = tread_wear_curr[idx]
             output.lastLapTreadWear[idx] = tread_wear_last[idx]
